src/hanusovedni/static/sass/_partners.scss
.template-partners {
  h2 {
    font-family: $font-special;
    margin-bottom: 1rem;
  }

  .partner {
    background: $c-bg;

    a {
      color: $c-orange-light;
      font-weight: bold;

      &:hover, &:active {
        text-decoration: underline;
      }
    }

    &:hover, &:active {
      background-color: lighten($c-bg, 5);
      transition: all 0.5s;

      .logo {
        filter: none;
      }
    }
  }

  .logo {
    filter: grayscale(1);
  }
}

